--- a/docs/items/dusts/coal_dust.mdx
+++ b/docs/items/dusts/coal_dust.mdx
@@ -12,17 +12,29 @@ title: Coal Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_coal_dust techreborn:small_pile_of_coal_dust air input techreborn:small_pile_of_coal_dust techreborn:small_pile_of_coal_dust air input air air air output techreborn:coal_dust"/>
 
-<McItem slug="techreborn:grinder" inline={true}/> recipes:  
-<McItem slug="minecraft:coal" inline={true}/> → <McItem slug="techreborn:coal_dust" inline={true}/>  
-<McItem slug="minecraft:coal_ore" inline={true}/> → 2x <McItem slug="techreborn:coal_dust" inline={true}/>
+<Machine next={{input: [{id: "minecraft:coal"}], output: [{id: "techreborn:coal_dust"}], tool: "techreborn:grinder"}} />
 
-<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipes:  
-- 16x <McItem slug="minecraft:soul_sand" inline={true}/> + <McItem slug="techreborn:empty_cell" inline={true}/> →  
-  10x <McItem slug="minecraft:sand" inline={true}/> + 4x <McItem slug="techreborn:saltpeter_dust" inline={true}/> +  
-  <McItem slug="techreborn:coal_dust" inline={true}/> + <McItem slug="techreborn:oil_cell" inline={true}/>
-- 16x <McItem slug="techreborn:netherrack_dust" inline={true}/> + <McItem slug="techreborn:empty_cell" inline={true}/> →  
-  <McItem slug="minecraft:redstone" inline={true}/> + <McItem slug="techreborn:sulfur_cell" inline={true}/> +  
-  <McItem slug="techreborn:coal_dust" inline={true}/> + <McItem slug="minecraft:gold_nugget" inline={true}/>
+<Machine next={{input: [{id: "minecraft:coal_ore"}], output: [{id: "techreborn:coal_dust", qty: 2}], tool: "techreborn:grinder"}} />
+
+<Machine next={{input: [
+  {id: "minecraft:soul_sand", qty: 16},
+  {id: "techreborn:empty_cell"}
+], output: [
+  {id: "minecraft:sand", qty: 10},
+  {id: "techreborn:saltpeter_dust", qty: 4},
+  {id: "techreborn:coal_dust"},
+  {id: "techreborn:oil_cell"}
+], tool: "techreborn:industrial_centrifuge"}} />
+
+<Machine next={{input: [
+  {id: "techreborn:netherrack_dust", qty: 16},
+  {id: "techreborn:empty_cell"}
+], output: [
+  {id: "minecraft:redstone"},
+  {id: "techreborn:sulfur_cell"},
+  {id: "techreborn:coal_dust"},
+  {id: "minecraft:gold_nugget"}
+], tool: "techreborn:industrial_centrifuge"}} />
 
 ## Usage
 
@@ -38,11 +50,18 @@ title: Coal Dust
 
 <CraftingTable recipe="input techreborn:coal_dust techreborn:coal_dust air input techreborn:coal_dust techreborn:coal_dust air input air air air output techreborn:carbon_fiber"/>
 
-<McItem slug="techreborn:blast_furnace" inline={true}/> recipe:  
-<McItem slug="minecraft:iron_ingot" inline={true}/> + 2x <McItem slug="techreborn:coal_dust" inline={true}/> →  
-<McItem slug="techreborn:steel_ingot" inline={true}/> + 2x <McItem slug="techreborn:dark_ashes" inline={true}/>  
+<Machine next={{input: [
+  {id: "minecraft:iron_ingot"},
+  {id: "techreborn:coal_dust", qty: 2}
+], output: [
+  {id: "techreborn:steel_ingot"},
+  {id: "techreborn:dark_ashes", qty: 2}
+], tool: "techreborn:blast_furnace"}} />
 _This requires 1000 heat._
 
-<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
-<McItem slug="techreborn:coal_dust" inline={true}/> + 2x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-2x <McItem slug="techreborn:carbon_cell" inline={true}/>
+<Machine next={{input: [
+  {id: "techreborn:coal_dust"},
+  {id: "techreborn:empty_cell", qty: 2}
+], output: [
+  {id: "techreborn:carbon_cell", qty: 2}
+], tool: "techreborn:industrial_electrolyzer"}} />
