--- a/docs/items/dusts/endstone_dust.mdx
+++ b/docs/items/dusts/endstone_dust.mdx
@@ -12,22 +12,28 @@ title: Endstone Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_endstone_dust techreborn:small_pile_of_endstone_dust air input techreborn:small_pile_of_endstone_dust techreborn:small_pile_of_endstone_dust air input air air air output techreborn:endstone_dust"/>
 
-<McItem slug="techreborn:grinder" inline={true}/> recipe:  
-<McItem slug="minecraft:end_stone" inline={true}/> → <McItem slug="techreborn:endstone_dust" inline={true}/>
+<Machine next={{input: [{id: "minecraft:end_stone"}], output: [{id: "techreborn:endstone_dust"}], tool: "techreborn:grinder"}} />
 
-<McItem slug="techreborn:industrial_grinder" inline={true}/> recipes:  
-- <McItem slug="minecraft:end_stone" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> →  
-  2x <McItem slug="techreborn:endstone_dust" inline={true}/>  
-- <McItem slug="minecraft:end_stone_bricks" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> →  
-  4x <McItem slug="techreborn:endstone_dust" inline={true}/>
+<Machine next={{input: [
+  {id: "minecraft:end_stone"},
+  {id: "techreborn:water_cell"}
+], output: [{id: "techreborn:endstone_dust", qty: 2}], tool: "techreborn:industrial_grinder"}} />
+
+<Machine next={{input: [
+  {id: "minecraft:end_stone_bricks"},
+  {id: "techreborn:water_cell"}
+], output: [{id: "techreborn:endstone_dust", qty: 4}], tool: "techreborn:industrial_grinder"}} />
 
 ## Usage
 
 <CraftingTable recipe="input air air air input air techreborn:endstone_dust air input air air air output techreborn:small_pile_of_endstone_dust,4"/>
 
-<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
-16x <McItem slug="techreborn:endstone_dust" inline={true}/> + 2x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-<McItem slug="techreborn:helium3_cell" inline={true}/> +  
-<McItem slug="techreborn:helium_cell" inline={true}/> +  
-<McItem slug="techreborn:small_pile_of_tungsten_dust" inline={true}/> +  
-12x <McItem slug="minecraft:sand" inline={true}/>
+<Machine next={{input: [
+  {id: "techreborn:endstone_dust", qty: 16},
+  {id: "techreborn:empty_cell", qty: 2}
+], output: [
+  {id: "techreborn:helium3_cell"},
+  {id: "techreborn:helium_cell"},
+  {id: "techreborn:small_pile_of_tungsten_dust"},
+  {id: "minecraft:sand", qty: 12}
+], tool: "techreborn:industrial_centrifuge"}} />
