--- a/docs/items/dusts/lazurite_dust.mdx
+++ b/docs/items/dusts/lazurite_dust.mdx
@@ -10,28 +10,35 @@ title: Lazurite Dust
 
 ## Recipe
 
-<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
 <CraftingTable recipe="input techreborn:small_pile_of_lazurite_dust techreborn:small_pile_of_lazurite_dust air input techreborn:small_pile_of_lazurite_dust techreborn:small_pile_of_lazurite_dust air input air air air output techreborn:lazurite_dust"/>
 
-<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
-<McItem slug="minecraft:lapis_lazuli" inline={true}/> → 3x <McItem slug="techreborn:lazurite_dust" inline={true}/> +  
-<McItem slug="techreborn:small_pile_of_pyrite_dust" inline={true}/> +  
-<McItem slug="techreborn:small_pile_of_calcite_dust" inline={true}/> +  
-2x <McItem slug="techreborn:small_pile_of_sodalite_dust" inline={true}/>
+<Machine next={{input: [{id: "minecraft:lapis_lazuli"}], output: [
+  {id: "techreborn:lazurite_dust", qty: 3},
+  {id: "techreborn:small_pile_of_pyrite_dust"},
+  {id: "techreborn:small_pile_of_calcite_dust"},
+  {id: "techreborn:small_pile_of_sodalite_dust", qty: 2}
+], tool: "techreborn:industrial_centrifuge"}} />
 
-<McItem slug="techreborn:industrial_grinder" inline={true}/> recipe:  
-<McItem slug="minecraft:lapis_lazuli_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> →  
-12x <McItem slug="minecraft:lapis_lazuli" inline={true}/> + 3x <McItem slug="techreborn:lazurite_dust" inline={true}/>
+<Machine next={{input: [
+  {id: "minecraft:lapis_lazuli_ore"},
+  {id: "techreborn:water_cell"}
+], output: [
+  {id: "minecraft:lapis_lazuli", qty: 12},
+  {id: "techreborn:lazurite_dust", qty: 3}
+], tool: "techreborn:industrial_grinder"}} />
 
 ## Usage
 
-<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
 <CraftingTable recipe="input air air air input air techreborn:lazurite_dust air input air air air output techreborn:small_pile_of_lazurite_dust,4"/>
 
-<McItem slug="techreborn:industrial_electrolyzer" inline={true}/> recipe:  
-29x <McItem slug="techreborn:lazurite_dust" inline={true}/> + 10x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-3x <McItem slug="techreborn:aluminum_dust" inline={true}/> + 3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
-2x <McItem slug="techreborn:calcium_cell" inline={true}/> + 4x <McItem slug="techreborn:sodium_cell" inline={true}/>
+<Machine next={{input: [
+  {id: "techreborn:lazurite_dust", qty: 29},
+  {id: "techreborn:empty_cell", qty: 10}
+], output: [
+  {id: "techreborn:aluminum_dust", qty: 3},
+  {id: "techreborn:silicon_cell", qty: 3},
+  {id: "techreborn:calcium_cell", qty: 2},
+  {id: "techreborn:sodium_cell", qty: 4}
+], tool: "techreborn:industrial_electrolyzer"}} />
 
-<McItem slug="techreborn:compressor" inline={true}/> recipe:  
-8x <McItem slug="techreborn:lazurite_dust" inline={true}/> → <McItem slug="techreborn:lazurite_plate" inline={true}/>
+<Machine next={{input: [{id: "techreborn:lazurite_dust", qty: 8}], output: [{id: "techreborn:lazurite_plate"}], tool: "techreborn:compressor"}} />
