--- a/docs/items/dusts/flint_dust.mdx
+++ b/docs/items/dusts/flint_dust.mdx
@@ -6,23 +6,30 @@ title: Flint Dust
 
 # Flint dust
 
-**Flint dust** is a dust used to get <McItem slug="techreborn:silicon_cell" inline={true}/>.
+**Flint dust** is a dust used to get <McItem slug="techreborn:silicon_cell" />.
 
 ## Recipe
 
-<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
 <CraftingTable recipe="input techreborn:small_pile_of_flint_dust techreborn:small_pile_of_flint_dust air input techreborn:small_pile_of_flint_dust techreborn:small_pile_of_flint_dust air input air air air output techreborn:flint_dust"/>
 
-<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
-16x <McItem slug="techreborn:basalt_dust" inline={true}/> → <McItem slug="techreborn:peridot_dust" inline={true}/> +  
-3x <McItem slug="techreborn:calcite_dust" inline={true}/> + 8x <McItem slug="techreborn:flint_dust" inline={true}/> +  
-4x <McItem slug="techreborn:dark_ashes" inline={true}/>
+<Machine next={{input: [{id: "techreborn:basalt_dust", qty: 16}], output: [
+  {id: "techreborn:peridot_dust"},
+  {id: "techreborn:calcite_dust", qty: 3},
+  {id: "techreborn:flint_dust", qty: 8},
+  {id: "techreborn:dark_ashes", qty: 4}
+], tool: "techreborn:industrial_centrifuge"}} />
 
 ## Usage
 
-**Flint dust** could be further processed in <McItem slug="techreborn:industrial_electrolyzer" inline={true}/>  
-8x <McItem slug="techreborn:flint_dust" inline={true}/> + 2x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-<McItem slug="techreborn:silicon_cell" inline={true}/> + <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+**Flint dust** could be further processed in <McItem slug="techreborn:industrial_electrolyzer" />
 
-Besides that, **Flint dust** could be split into small piles using <McItem slug="minecraft:crafting_table" inline={true}/>  
+<Machine next={{input: [
+  {id: "techreborn:flint_dust", qty: 8},
+  {id: "techreborn:empty_cell", qty: 2}
+], output: [
+  {id: "techreborn:silicon_cell"},
+  {id: "techreborn:compressed_air_cell"}
+], tool: "techreborn:industrial_electrolyzer"}} />
+
+Besides that, **Flint dust** could be split into small piles using <McItem slug="minecraft:crafting_table" />  
 <CraftingTable recipe="input air air air input air techreborn:flint_dust air input air air air output techreborn:small_pile_of_flint_dust,4"/>
