--- a/docs/items/dusts/nickel_dust.mdx
+++ b/docs/items/dusts/nickel_dust.mdx
@@ -6,37 +6,62 @@ title: Nickel Dust
 
 # Nickel Dust
 
-**Nickel Dust** is a dust added by TechReborn, and is an important stepping stone to the more complicated machinery added by the mod. It is used to produce <McItem slug="techreborn:nickel_ingot" inline={true}/>.
+**Nickel Dust** is a dust added by TechReborn, and is an important stepping stone to the more complicated machinery added by the mod. It is used to produce <McItem slug="techreborn:nickel_ingot" />.
 
-Before the player makes the <McItem slug="techreborn:industrial_grinder" inline={true}/>, the primary way of acquiring <McItem slug="techreborn:nickel_dust" inline={true}/> is from <McItem slug="techreborn:small_pile_of_nickel_dust" inline={true}/>
+Before the player makes the <McItem slug="techreborn:industrial_grinder" />, the primary way of acquiring <McItem slug="techreborn:nickel_dust" /> is from <McItem slug="techreborn:small_pile_of_nickel_dust" />.
 
 ## Recipe
 
-<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
 <CraftingTable recipe="input techreborn:small_pile_of_nickel_dust techreborn:small_pile_of_nickel_dust air input techreborn:small_pile_of_nickel_dust techreborn:small_pile_of_nickel_dust air input air air air output techreborn:nickel_dust"/>
 
-<McItem slug="techreborn:grinder" inline={true}/> recipe:  
-<McItem slug="techreborn:nickel_ingot" inline={true}/> → <McItem slug="techreborn:nickel_dust" inline={true}/>  
-<McItem slug="techreborn:nickel_storage_block" inline={true}/> → 9x <McItem slug="techreborn:nickel_dust" inline={true}/>
+<Machine next={{input: [{id: "techreborn:nickel_ingot"}], output: [{id: "techreborn:nickel_dust"}], tool: "techreborn:grinder"}} />
 
-<McItem slug="techreborn:industrial_grinder" inline={true}/> recipes:  
-<McItem slug="techreborn:sheldonite_ore" inline={true}/> + <McItem slug="techreborn:water_cell" inline={true}/> →  
-2x <McItem slug="techreborn:platinum_dust" inline={true}/> + <McItem slug="techreborn:nickel_dust" inline={true}/> + 2x <McItem slug="techreborn:iridium_nugget" inline={true}/>  
-<McItem slug="techreborn:sheldonite_ore" inline={true}/> + <McItem slug="techreborn:mercury_cell" inline={true}/> →  
-3x <McItem slug="techreborn:platinum_dust" inline={true}/> + <McItem slug="techreborn:nickel_dust" inline={true}/> + 2x <McItem slug="techreborn:iridium_nugget" inline={true}/>  
-<McItem slug="minecraft:gold_ore" inline={true}/> + <McItem slug="techreborn:sodium_persulfate_cell" inline={true}/> →  
-2x <McItem slug="minecraft:raw_gold" inline={true}/> + <McItem slug="minecraft:raw_copper" inline={true}/> + <McItem slug="techreborn:nickel_dust" inline={true}/>  
-<McItem slug="minecraft:copper_ore" inline={true}/> + <McItem slug="techreborn:sodium_persulfate_cell" inline={true}/> →  
-2x <McItem slug="minecraft:raw_copper" inline={true}/> + <McItem slug="minecraft:raw_gold" inline={true}/> + <McItem slug="techreborn:nickel_dust" inline={true}/>
+<Machine next={{input: [{id: "techreborn:nickel_storage_block"}], output: [{id: "techreborn:nickel_dust", qty: 9}], tool: "techreborn:grinder"}} />
+
+<Machine next={{input: [
+  {id: "techreborn:sheldonite_ore"},
+  {id: "techreborn:water_cell"}
+], output: [
+  {id: "techreborn:platinum_dust", qty: 2},
+  {id: "techreborn:nickel_dust"},
+  {id: "techreborn:iridium_nugget", qty: 2}
+], tool: "techreborn:industrial_grinder"}} />
+
+<Machine next={{input: [
+  {id: "techreborn:sheldonite_ore"},
+  {id: "techreborn:mercury_cell"}
+], output: [
+  {id: "techreborn:platinum_dust", qty: 3},
+  {id: "techreborn:nickel_dust"},
+  {id: "techreborn:iridium_nugget", qty: 2}
+], tool: "techreborn:industrial_grinder"}} />
+
+<Machine next={{input: [
+  {id: "minecraft:gold_ore"},
+  {id: "techreborn:sodium_persulfate_cell"}
+], output: [
+  {id: "minecraft:raw_gold", qty: 2},
+  {id: "minecraft:raw_copper"},
+  {id: "techreborn:nickel_dust"}
+], tool: "techreborn:industrial_grinder"}} />
+
+<Machine next={{input: [
+  {id: "minecraft:copper_ore"},
+  {id: "techreborn:sodium_persulfate_cell"}
+], output: [
+  {id: "minecraft:raw_copper", qty: 2},
+  {id: "minecraft:raw_gold"},
+  {id: "techreborn:nickel_dust"}
+], tool: "techreborn:industrial_grinder"}} />
 
 ## Usage
 
-<McItem slug="minecraft:crafting_table" inline={true}/> recipe:  
 <CraftingTable recipe="input air air air input air techreborn:nickel_dust air input air air air output techreborn:small_pile_of_nickel_dust,4"/>
 
-**Smelting**:  
-<McItem slug="techreborn:nickel_dust" inline={true}/> → <McItem slug="techreborn:nickel_ingot" inline={true}/>
+<Machine next={{input: [{id: "techreborn:nickel_dust"}], output: [{id: "techreborn:nickel_ingot"}], tool: "techreborn:iron_furnace"}} />
 
-<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
-3x <McItem slug="techreborn:nickel_dust" inline={true}/> →  
-3x <McItem slug="minecraft:iron_nugget" inline={true}/> + 3x <McItem slug="minecraft:gold_nugget" inline={true}/> + 3x <McItem slug="techreborn:copper_nugget" inline={true}/>
+<Machine next={{input: [{id: "techreborn:nickel_dust", qty: 3}], output: [
+  {id: "minecraft:iron_nugget", qty: 3},
+  {id: "minecraft:gold_nugget", qty: 3},
+  {id: "techreborn:copper_nugget", qty: 3}
+], tool: "techreborn:industrial_centrifuge"}} />
