--- a/docs/items/dusts/red_garnet_dust.mdx
+++ b/docs/items/dusts/red_garnet_dust.mdx
@@ -6,30 +6,36 @@ title: Red Garnet Dust
 
 # Red Garnet Dust
 
-**Red Garnet Dust** is an intermediate product received by processing <McItem slug="techreborn:red_garnet" inline={true}/>.
+**Red Garnet Dust** is an intermediate product received by processing <McItem slug="techreborn:red_garnet" />.
 
 ## Recipe
 
 <CraftingTable recipe="input techreborn:small_pile_of_red_garnet_dust techreborn:small_pile_of_red_garnet_dust air input techreborn:small_pile_of_red_garnet_dust techreborn:small_pile_of_red_garnet_dust air input air air air output techreborn:red_garnet_dust"/>
 
-<McItem slug="techreborn:grinder" inline={true}/> recipe:  
-<McItem slug="techreborn:red_garnet" inline={true}/> → <McItem slug="techreborn:red_garnet_dust" inline={true}/>
+<Machine next={{input: [{id: "techreborn:red_garnet"}], output: [{id: "techreborn:red_garnet_dust"}], tool: "techreborn:grinder"}} />
 
-<McItem slug="techreborn:implosion_compressor" inline={true}/> recipe:  
-9x <McItem slug="minecraft:block_of_redstone" inline={true}/> + 16x <McItem slug="minecraft:tnt" inline={true}/> →  
-4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> + 4x <McItem slug="techreborn:dark_ashes" inline={true}/>
+<Machine next={{input: [
+  {id: "minecraft:block_of_redstone", qty: 9},
+  {id: "minecraft:tnt", qty: 16}
+], output: [
+  {id: "techreborn:red_garnet_dust", qty: 4},
+  {id: "techreborn:dark_ashes", qty: 4}
+], tool: "techreborn:implosion_compressor"}} />
 
 ## Usage
 
-**Red Garnet Dust** could be further processed in <McItem slug="techreborn:industrial_centrifuge" inline={true}/>  
-16x <McItem slug="techreborn:red_garnet_dust" inline={true}/> →  
-3x <McItem slug="techreborn:pyrope_dust" inline={true}/> +  
-5x <McItem slug="techreborn:almandine_dust" inline={true}/> +  
-8x <McItem slug="techreborn:spessartine_dust" inline={true}/>
+<Machine next={{input: [{id: "techreborn:red_garnet_dust", qty: 16}], output: [
+  {id: "techreborn:pyrope_dust", qty: 3},
+  {id: "techreborn:almandine_dust", qty: 5},
+  {id: "techreborn:spessartine_dust", qty: 8}
+], tool: "techreborn:industrial_centrifuge"}} />
 
-Besides that, **Red Garnet Dust** could be split into small piles using <McItem slug="minecraft:crafting_table" inline={true}/>  
 <CraftingTable recipe="input air air air input air techreborn:red_garnet_dust air input air air air output techreborn:small_pile_of_red_garnet_dust,4"/>
 
-Also, **Red Garnet Dust** could be compressed back into a gem using the raw power of TNT in the <McItem slug="techreborn:implosion_compressor" inline={true}/>  
-4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> + 16x <McItem slug="minecraft:tnt" inline={true}/> →  
-3x <McItem slug="techreborn:red_garnet" inline={true}/> + 8x <McItem slug="techreborn:dark_ashes" inline={true}/>
+<Machine next={{input: [
+  {id: "techreborn:red_garnet_dust", qty: 4},
+  {id: "minecraft:tnt", qty: 16}
+], output: [
+  {id: "techreborn:red_garnet", qty: 3},
+  {id: "techreborn:dark_ashes", qty: 8}
+], tool: "techreborn:implosion_compressor"}} />
