--- a/docs/items/dusts/uvarovite_dust.mdx
+++ b/docs/items/dusts/uvarovite_dust.mdx
@@ -12,20 +12,10 @@ title: Uvarovite Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_uvarovite_dust techreborn:small_pile_of_uvarovite_dust air input techreborn:small_pile_of_uvarovite_dust techreborn:small_pile_of_uvarovite_dust air input air air air output techreborn:uvarovite_dust"/>
 
-<McItem slug="techreborn:industrial_centrifuge" inline={true}/> recipe:  
-16x <McItem slug="techreborn:yellow_garnet_dust" inline={true}/> →  
-5x <McItem slug="techreborn:andradite_dust" inline={true}/> +  
-8x <McItem slug="techreborn:grossular_dust" inline={true}/> +  
-3x <McItem slug="techreborn:uvarovite_dust" inline={true}/>
+<Machine next={{input: [{id: "techreborn:yellow_garnet_dust", qty: 16}], output: [{id: "techreborn:andradite_dust", qty: 5}, {id: "techreborn:grossular_dust", qty: 8}, {id: "techreborn:uvarovite_dust", qty: 3}], tool: "techreborn:industrial_centrifuge"}} />
 
 ## Usage
 
-**Uvarovite Dust** could be further processed in <McItem slug="techreborn:industrial_electrolyzer" inline={true}/>  
-20x <McItem slug="techreborn:uvarovite_dust" inline={true}/> + 12x <McItem slug="techreborn:empty_cell" inline={true}/> →  
-3x <McItem slug="techreborn:calcium_cell" inline={true}/> +  
-2x <McItem slug="techreborn:chrome_dust" inline={true}/> +  
-3x <McItem slug="techreborn:silicon_cell" inline={true}/> +  
-6x <McItem slug="techreborn:compressed_air_cell" inline={true}/>
+<Machine next={{input: [{id: "techreborn:uvarovite_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 12}], output: [{id: "techreborn:calcium_cell", qty: 3}, {id: "techreborn:chrome_dust", qty: 2}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
 
-Besides that **Uvarovite Dust** could be split into small piles using <McItem slug="minecraft:crafting_table" inline={true}/>  
 <CraftingTable recipe="input air air air input air techreborn:uvarovite_dust air input air air air output techreborn:small_pile_of_uvarovite_dust,4"/>
